WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233467
WebSWServerConnection::createFetchTask does not need to query twice for a registration
https://bugs.webkit.org/show_bug.cgi?id=233467
Summary
WebSWServerConnection::createFetchTask does not need to query twice for a reg...
youenn fablet
Reported
2021-11-23 23:49:19 PST
WebSWServerConnection::createFetchTask does not need to query twice for a registration
Attachments
Patch
(2.62 KB, patch)
2021-11-23 23:51 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.61 KB, patch)
2021-12-01 03:17 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-11-23 23:51:30 PST
Created
attachment 445073
[details]
Patch
Chris Dumez
Comment 2
2021-11-30 08:05:13 PST
Comment on
attachment 445073
[details]
Patch r=me
Chris Dumez
Comment 3
2021-11-30 08:05:27 PST
Comment on
attachment 445073
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=445073&action=review
> Source/WebKit/ChangeLog:8 > + Instead of searching for a wokrer and then searching for a registration,
typo: wokrer
Radar WebKit Bug Importer
Comment 4
2021-11-30 23:50:22 PST
<
rdar://problem/85909888
>
youenn fablet
Comment 5
2021-12-01 03:17:33 PST
Created
attachment 445545
[details]
Patch for landing
EWS
Comment 6
2021-12-01 04:27:45 PST
Committed
r286359
(
244718@main
): <
https://commits.webkit.org/244718@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445545
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug